# eegcanon

./: .gitignore  README.md  pyproject.toml  test.py
eegcanon/: pipeline.py  pyproject.toml
eegcanon.egg-info/: PKG-INFO  SOURCES.txt
eegcanon/benchmarks/: benchmark_eegcanon.ipynb
eegcanon/core/: canonical.py  epoching.py  policy.py  warnings.py
eegcanon/features/: bandpower.py  extract.py  hjorth.py  psd.py
eegcanon/infer/: channels.py  montage.py  sampling.py
eegcanon/io/: load_csv.py  load_edf.py  load_file.py  registry.py
eegcanon/normalize/: time.py
eegcanon/torch/: dataset.py  supervised.py
examples/: dummy_eeg.csv  labels.csv  test_canonical_eeg.py  test_channel_normalization.py  test_epoching.py  test_io_loader.py  test_load_edf.py  test_metadata_inference.py  test_time_normalization.py  test_torch_dataset.py
