[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eegcanon"
version = "0.1.0"
description = "Canonical EEG representation for reproducible ML pipelines"
authors = [
  { name="Akash Reddy", email="your@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "mne",
  "torch",
  "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/yourusername/eegcanon"
Repository = "https://github.com/yourusername/eegcanon"